--- a/index.html
+++ b/index.html
@@ -7,5 +7,17 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="grid">
+      <div data-id="1"></div>
+      <div data-id="2"></div>
+      <div data-id="3"></div>
+      <div data-id="4"></div>
+      <div data-id="5"></div>
+      <div data-id="6"></div>
+      <div data-id="7"></div>
+      <div data-id="8"></div>
+      <div data-id="9"></div>
+    </div>
+  </body>
 </html>
