--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="script.js" defer></script>
   </head>
   <body>
+    <header>
+      <h1>TIC TAC TOE</h1>
+    </header>
+    <aside></aside>
     <div class="grid">
       <div data-id="1"></div>
       <div data-id="2"></div>
@@ -19,5 +23,7 @@
       <div data-id="8"></div>
       <div data-id="9"></div>
     </div>
+    <aside></aside>
+    <footer></footer>
   </body>
 </html>
