--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
     <header>
       <h1>TIC TAC TOE</h1>
     </header>
-    <aside></aside>
+    <aside>
+      <p>
+        <img src="close-custom.png" alt="" width="50" /><label for="crossName"
+          >Player name: </label
+        ><input type="text" name="crossName" id="crossName" />
+        <br />
+        <br />
+        <img src="circle-outline-custom.png" alt="" width="50" /><label
+          for="circleName"
+          >Player name: </label
+        ><input type="text" name="circleName" id="circleName" />
+      </p>
+    </aside>
     <div class="grid">
       <div data-id="1"></div>
       <div data-id="2"></div>
@@ -24,6 +36,6 @@
       <div data-id="9"></div>
     </div>
     <aside></aside>
-    <footer></footer>
+    <!--<footer></footer>-->
   </body>
 </html>
