Add who first play

--- a/index.html
+++ b/index.html
@@ -23,6 +23,24 @@
           >Player name: </label
         ><input type="text" name="circleName" id="circleName" />
       </p>
+      <br /><br />
+      <p>Who will play first?</p>
+      <p>
+        <span
+          ><img
+            class="whoFirst selected"
+            src="close-custom.png"
+            alt=""
+            width="50"
+        /></span>
+        <span
+          ><img
+            class="whoFirst"
+            src="circle-outline-custom.png"
+            alt=""
+            width="50"
+        /></span>
+      </p>
     </aside>
     <div class="grid">
       <div data-id="1"></div>
