Add type mode and buttons

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
       <h1>TIC TAC TOE</h1>
     </header>
     <aside>
+      <p>Play with computer</p>
+      <br />
+      <label for="crossName">Enter your name: </label
+      ><input type="text" name="crossName" id="crossName" />
+      <br />
+      <br />
+      <p>Two players mode</p>
       <p>
         <img src="close-custom.png" alt="" width="50" /><label for="crossName"
           >Player name: </label
@@ -24,22 +31,29 @@
         ><input type="text" name="circleName" id="circleName" />
       </p>
       <br /><br />
+      <p>What will you play with?</p>
+      <br />
+
       <p>Who will play first?</p>
       <p>
         <span
-          ><img
-            class="whoFirst selected"
-            src="close-custom.png"
-            alt=""
-            width="50"
+          ><img class="whoFirst" src="close-custom.png" alt="" width="50"
         /></span>
         <span
           ><img
-            class="whoFirst"
+            class="whoFirst selected"
             src="circle-outline-custom.png"
             alt=""
             width="50"
         /></span>
+      </p>
+      <br />
+      <br />
+      <br />
+      <p>
+        <button type="button">Start</button>
+        <br />
+        <button type="button">Reset</button>
       </p>
     </aside>
     <div class="grid">
