--- a/index.html
+++ b/index.html
@@ -67,7 +67,12 @@
       <div data-id="8"></div>
       <div data-id="9"></div>
     </div>
-    <aside></aside>
+    <aside>
+      <p style="font-size: 20px; font-weight: bold">Name wins</p>
+      <br />
+      <p>Score</p>
+      <p>Name 0 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Name 0</p>
+    </aside>
     <!--<footer></footer>-->
   </body>
 </html>
