Add default players names

--- a/index.html
+++ b/index.html
@@ -15,13 +15,18 @@
       <p>
         <img src="close-custom.png" alt="" width="50" /><label for="crossName"
           >Player name: </label
-        ><input type="text" name="crossName" id="crossName" />
+        ><input type="text" name="crossName" id="crossName" value="Player 1" />
         <br />
         <br />
         <img src="circle-outline-custom.png" alt="" width="50" /><label
           for="circleName"
           >Player name: </label
-        ><input type="text" name="circleName" id="circleName" />
+        ><input
+          type="text"
+          name="circleName"
+          id="circleName"
+          value="Player 2"
+        />
       </p>
     </aside>
     <div class="grid">
