Add html score table

--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
       <p style="font-size: 20px; font-weight: bold">Name wins</p>
       <br />
       <p>Score</p>
-      <p>Name 0 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Name 0</p>
+      <p>
+        <span class="player1Name"></span>
+        <span class="player1Score"></span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <span class="player2Name"></span> <span class="player2Score"></span>
+      </p>
       <p>
         <button type="button">Reset</button>
       </p>
