Add init score in score table

--- a/index.html
+++ b/index.html
@@ -44,11 +44,18 @@
       <p style="font-size: 20px; font-weight: bold">Name wins</p>
       <br />
       <p>Score</p>
+
       <p>
-        <span class="player1Name"></span>
-        <span class="player1Score"></span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <span class="player2Name"></span> <span class="player2Score"></span>
+        <span class="player1Name"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+          class="player2Name"
+        ></span>
       </p>
+      <p>
+        <span class="player1Score"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+          class="player2Score"
+        ></span>
+      </p>
+
       <p>
         <button type="button">Reset</button>
       </p>
