Add modal dialog

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p>
         <img src="close-custom.png" alt="" width="50" /><label for="crossName"
           >Player name: </label
-        ><input type="text" name="crossName" id="crossName" value="Player 1" />
+        ><input type="text" name="crossName" id="crossName" value="Player" />
         <br />
         <br />
         <img src="circle-outline-custom.png" alt="" width="50" /><label
@@ -25,7 +25,7 @@
           type="text"
           name="circleName"
           id="circleName"
-          value="Player 2"
+          value="Another Player"
         />
       </p>
     </aside>
@@ -60,6 +60,9 @@
         <button type="button">Reset</button>
       </p>
     </aside>
+    <dialog>
+      <h2>win</h2>
+    </dialog>
     <!--<footer></footer>-->
   </body>
 </html>
