--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     </aside>
     <dialog>
       <h2>win</h2>
+      <button>Next round</button>
     </dialog>
     <!--<footer></footer>-->
   </body>
