--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <aside>
       <p>
         <img src="close-custom.png" alt="" width="50" /><label for="crossName"
-          >Player name: </label
+          >Player 1 name: </label
         ><input type="text" name="crossName" id="crossName" value="Player" />
         <br />
         <br />
         <img src="circle-outline-custom.png" alt="" width="50" /><label
           for="circleName"
-          >Player name: </label
+          >Player 2 name: </label
         ><input
           type="text"
           name="circleName"
