Renew result table

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     </header>
     <aside>
       <p>
-        <img src="close-custom.png" alt="" width="50" /><label for="crossName"
+        <img src="close-custom.png" alt="" width="40" /><label for="crossName"
           >Player 1 name: </label
         ><input type="text" name="crossName" id="crossName" value="Player" />
         <br />
         <br />
-        <img src="circle-outline-custom.png" alt="" width="50" /><label
+        <img src="circle-outline-custom.png" alt="" width="35" /><label
           for="circleName"
           >Player 2 name: </label
         ><input
@@ -41,23 +41,18 @@
       <div data-id="9"></div>
     </div>
     <aside>
-      <p style="font-size: 20px; font-weight: bold">Name wins</p>
-      <br />
       <p>Score</p>
 
-      <p>
-        <span class="player1Name"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-          class="player2Name"
-        ></span>
+      <p class="scoreRow">
+        <span class="player1Name">1fdfdfdfdfd</span
+        ><span class="player2Name">1</span>
       </p>
-      <p>
-        <span class="player1Score"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-          class="player2Score"
-        ></span>
+      <p class="scoreRow">
+        <span class="player1Score">1</span><span class="player2Score">1</span>
       </p>
 
       <p>
-        <button type="button">Reset</button>
+        <button class="resetButton" type="button">Reset</button>
       </p>
     </aside>
     <dialog>
