Add players name  chargeable

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       <p>Score</p>
 
       <p class="scoreRow">
-        <span class="player1Name">1fdfdfdfdfd</span
-        ><span class="player2Name">1</span>
+        <span id="resultPlayer1Name" class="player1Name">Player</span>
+        <span id="resultPlayer2Name" class="player2Name">Another Player</span>
       </p>
       <p class="scoreRow">
         <span class="player1Score">1</span><span class="player2Score">1</span>
