Add scoring results

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         <span id="resultPlayer2Name" class="player2Name">Another Player</span>
       </p>
       <p class="scoreRow">
-        <span class="player1Score">0</span><span class="player2Score">0</span>
+        <span id="player1Score" class="player1Score">0</span
+        ><span id="player2Score" class="player2Score">0</span>
       </p>
 
       <p>
