Add next round feature

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </aside>
     <dialog>
       <h2>win</h2>
-      <button>Next round</button>
+      <button id="next">Next round</button>
     </dialog>
     <!--<footer></footer>-->
   </body>
